--- a/Pipfile
+++ b/Pipfile
@@ -4,9 +4,16 @@ verify_ssl = true
 name = "pypi"
 
 [packages]
-django = "*"
+gunicorn = "*"
+flake8 = "==5.0.4"
+coverage = "*"
+coveralls = "==1.11.1"
+django = "==3.2.22"
+black = "==23.3.0"
+urllib3 = "==1.26.6"
+pyyaml = "*"
 
 [dev-packages]
 
 [requires]
-python_version = "3.10"
+python_version = "3.11"
