travis yml updated

--- a/.travis.yml
+++ b/.travis.yml
@@ -4,8 +4,12 @@ python:
 
 cache: pip
 
-services:
-  - sqlite3
+addons:
+  apt:
+    sources:
+      - travis-ci/sqlite3
+    packages:
+      - sqlite3
 
 install:
   - pip install -r requirements.txt  
