travis yml updated

--- a/.travis.yml
+++ b/.travis.yml
@@ -4,24 +4,17 @@ python:
 
 cache: pip
 
-addons:
-  apt:
-    sources:
-      - travis-ci/sqlite3
-    packages:
-      - sqlite3
 
 install:
   - pip install -r requirements.txt  
-  # - pip install python==3.8
 
 before_script:
   - python manage.py migrate
 
-after_script:
-  - coveralls
+# after_script:
+#   - coveralls
 
 script:
-  - black --check .  
-  - flake8 .
+#   - black --check .  
+#   - flake8 .
   - coverage run --source=mysite,polls manage.py test
