travis yml  updated

--- a/.travis.yml
+++ b/.travis.yml
@@ -7,18 +7,13 @@ cache: pip
 install:
   - pip install -r requirements.txt  
 
-before_script:
-  - python manage.py migrate
+
+after_script:
+  - coveralls
+
+
 
 script:
-    - python manage.py test
-
-# after_script:
-#   - coveralls
-
-
-
-# script:
 #   - black --check .  
 #   - flake8 .
-#   - coverage run --source=mysite,polls manage.py test
+  - coverage run --source=mysite,polls manage.py test
