--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,26 @@
 asgiref==3.7.2
+black==23.9.1
+certifi==2023.7.22
+charset-normalizer==3.3.0
+click==8.1.7
+colorama==0.4.6
+coverage==6.5.0
+coveralls==3.3.1
 Django==4.2.5
-gunicorn==21.2.0
+docopt==0.6.2
+flake8==6.1.0
+idna==3.4
+iniconfig==2.0.0
+mccabe==0.7.0
+mypy-extensions==1.0.0
 packaging==23.2
+pathspec==0.11.2
+platformdirs==3.11.0
+pluggy==1.3.0
+pycodestyle==2.11.1
+pyflakes==3.1.0
+pytest==7.4.2
+requests==2.31.0
 sqlparse==0.4.4
 tzdata==2023.3
+urllib3==2.0.6
