--- a/.travis.yml
+++ b/.travis.yml
@@ -25,7 +25,7 @@ deploy:
   secret_access_key:
     secure: $SECRETACCESSKEYID
   region: "us-west-2"
-  app: "eqasite"
+  app: "qasite"
   env: "qasite-env"
   bucket_name: "s3://elasticbeanstalk-us-west-2-004692833247/qasite/"
   
