--- a/requirements.txt
+++ b/requirements.txt
@@ -1,26 +1,26 @@
 asgiref==3.7.2
-black==23.9.1
+black==23.3.0
 certifi==2023.7.22
 charset-normalizer==3.3.0
 click==8.1.7
 colorama==0.4.6
-coverage==6.5.0
-coveralls==3.3.1
-Django==4.2.5
+coverage==5.5
+coveralls==1.11.1
+Django==3.2.22
 docopt==0.6.2
-flake8==6.1.0
+flake8==5.0.4
+gunicorn==21.2.0
 idna==3.4
-iniconfig==2.0.0
 mccabe==0.7.0
 mypy-extensions==1.0.0
 packaging==23.2
 pathspec==0.11.2
 platformdirs==3.11.0
-pluggy==1.3.0
-pycodestyle==2.11.1
-pyflakes==3.1.0
-pytest==7.4.2
+pycodestyle==2.9.1
+pyflakes==2.5.0
+pytz==2023.3.post1
+PyYAML==6.0.1
 requests==2.31.0
 sqlparse==0.4.4
 tzdata==2023.3
-urllib3==2.0.6
+urllib3==1.26.6
