--- a/.travis.yml
+++ b/.travis.yml
@@ -14,7 +14,7 @@ after_script:
 script:
   - black --check .  
   - flake8 --exclude=migrations.
-  - coverage run --source=mysite,polls manage.py test
+  - coverage run --source=pollsite,polls manage.py test
 
 deploy:
   provider: elasticbeanstalk
